--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,8 +18,15 @@
       {% endif %}
     {% endfor %}
     {% if page.sidebar.nav %}
-        {{ page.collection }}
-        {{ site.collections }}
+      {% for collection in site.collections %}
+    {% if collection.label == page.collection %}
+   
+        {% for item in site[collection.label] %}
+            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+        {% endfor %}
+    {% endif %}
+{% endfor %}
+
     {% endif %}
   {% endif %}
   </div>
