--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,33 +9,23 @@
       {% endif %}
       {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
       {% if s.text %}{{ s.text | markdownify }}{% endif %}
-      {% if s.nav %}
-        <ul class="nav__items">
-          <li>
-            <ul>
-          {% for item in page.collection %}
-              <li><a href="{{ item.url }}">{{ item.title }}</a></li>
-          {% endfor %}
-            </ul>
-          </li>
-        </ul>
-      {% endif %}
+      {% if s.nav %}{% include nav_list nav=s.nav %}{% endif %}
     {% endfor %}
     {% if page.sidebar.nav %}
+      {% include nav_list nav=page.sidebar.nav %}
       {% for collection in site.collections %}
-    {% if collection.label == page.collection %}
-    <ul class="nav__items">
-                <li>
-            <ul>
-        {% for item in site[collection.label] %}
-               <li><a href="{{ site.baseurl }}{{ item.url }}"{% if item.url == page.url %} class="active"{% endif %}>{{ item.title }}</a></li>
-        {% endfor %}
-     </ul>
-                     </li>
+        {% if collection.label == page.collection %}
+          <ul class="nav__items">
+            <li>
+              <ul>
+                {% for item in site[collection.label] %}
+                  <li><a href="{{ site.baseurl }}{{ item.url }}"{% if item.url == page.url %} class="active"{% endif %}>{{ item.title }}</a></li>
+                {% endfor %}
+              </ul>
+            </li>
           </ul>
-    {% endif %}
-{% endfor %}
-
+        {% endif %}
+      {% endfor %}
     {% endif %}
   {% endif %}
   </div>
