--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,8 @@
       {% include nav_list nav=page.sidebar.nav %}
       {% for collection in site.collections %}
         {% if collection.label == page.collection %}
+        <nav class="nav__list">
+          {% if page.sidebar.title %}<h3 class="nav__title" style="padding-left: 0;">{{ page.sidebar.title }}</h3>{% endif %}
           <ul class="nav__items">
             <li>
               <ul>
@@ -24,6 +26,7 @@
               </ul>
             </li>
           </ul>
+        </nav>
         {% endif %}
       {% endfor %}
     {% endif %}
