--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,8 @@
           <ul class="nav__items">
             <li>
               <ul>
-                {% for item in site[collection.label] %}
+                {% assign sorted = site[collection.label] | sort: 'weight' %}
+                {% for item in sorted %}
                   <li><a href="{{ site.baseurl }}{{ item.url }}"{% if item.url == page.url %} class="active"{% endif %}>{{ item.title }}</a></li>
                 {% endfor %}
               </ul>
