--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,10 +9,14 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-$link-color: red;
 
-.page__content h2 {
-  color: blue;
+img {
+    max-width: 50%;
+    width: auto\9;
+    height: auto;
+    vertical-align: middle;
+    border: 0;
+    -ms-interpolation-mode: bicubic;
 }
 
 
