--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,13 +4,6 @@
 @import "minimal-mistakes"; // main partials
 
 
-img {
-    max-width: 50%;
-    width: auto\9;
-    height: auto;
-    vertical-align: middle;
-    border: 0;
-    -ms-interpolation-mode: bicubic;
-}
+$body-color: blue;
 
 
