--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,20 @@
 @import "minimal-mistakes"; // main partials
 
 
-$body-color: blue;
+html {
+  font-size: 52px; // change to whatever
+
+  @include breakpoint($medium) {
+    font-size: 52px; // change to whatever
+  }
+
+  @include breakpoint($large) {
+    font-size: 52px; // change to whatever
+  }
+
+  @include breakpoint($x-large) {
+    font-size: 52px; // change to whatever
+  }
+}
 
 
