--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,22 +1,27 @@
+
+---
+# Only the main Sass file needs front matter (the dashes are enough)
+search: false
+---
+
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-
 html {
-  font-size: 52px; // change to whatever
+  font-size: 54px; // change to whatever
 
   @include breakpoint($medium) {
-    font-size: 52px; // change to whatever
+    font-size: 54px; // change to whatever
   }
 
   @include breakpoint($large) {
-    font-size: 52px; // change to whatever
+    font-size: 54px; // change to whatever
   }
 
   @include breakpoint($x-large) {
-    font-size: 52px; // change to whatever
+    font-size: 54px; // change to whatever
   }
 }
 
