--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,3 @@
-
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 search: false
@@ -9,19 +8,85 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-html {
-  font-size: 54px; // change to whatever
+figure img, figure iframe, figure .fluid-width-video-wrapper {
+  margin-bottom: 0.2em;
+}
 
-  @include breakpoint($medium) {
-    font-size: 54px; // change to whatever
+figure img {
+  border: solid;
+  border-width: thin;
+  border-style: solid;
+  border-color: lightgrey;
+}
+
+figure {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-box-align: start;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 2em 0;
+
+  &.fifty {
+    > a,
+    > img,
+    figcaption {
+      width: 100%;
+      @include breakpoint($small) {
+        width: calc(50% - 0.5em);
+      }
+    }
   }
 
-  @include breakpoint($large) {
-    font-size: 54px; // change to whatever
+  &.sixty {
+    > a,
+    > img {
+      width: 100%;
+      @include breakpoint($small) {
+        width: calc(60% - 0.5em);
+      }
+    }
+
+    figcaption {
+      width: 100%;
+      @include breakpoint($small) {
+        width: calc(40% - 0.5em);
+      }
+    }
   }
 
-  @include breakpoint($x-large) {
-    font-size: 54px; // change to whatever
+  &.seventy {
+    > a,
+    > img,
+    figcaption {
+      width: 100%;
+      @include breakpoint($small) {
+        width: calc(70% - 0.5em);
+      }
+    }
+  }
+
+  &.eighty {
+    > a,
+    > img,
+    figcaption {
+      width: 100%;
+      @include breakpoint($small) {
+        width: calc(80% - 0.5em);
+      }
+    }
+  }
+
+  &.ninety {
+    > a,
+    > img,
+    figcaption {
+      width: 100%;
+      @include breakpoint($small) {
+        width: calc(90% - 0.5em);
+      }
+    }
   }
 }
 
