--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,17 @@ search: false
   margin-bottom: 1em;
 }
 
+.taxonomy_header {
+    display: block;
+    margin: 0.5rem 0;
+    padding: 0.25rem 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
+    font-size: .75em;
+    color: #6f777d;
+    text-transform: uppercase;
+    border-bottom: 1px solid #f2f3f3;
+}
+
 .page__content .feature__item .archive__item-title {
   margin-top: 0.3em;
 }
